comment out links until feature implementations

--- a/TabloidMVC/Views/Tags/Index.cshtml
+++ b/TabloidMVC/Views/Tags/Index.cshtml
@@ -31,9 +31,12 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+
+                @* As the necessary features are implemented, uncomment the relevant links *@
+
+                @*Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
+                @*Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
+                @*Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
             </td>
         </tr>
 }
