--- a/TabloidMVC/Views/Post/Index.cshtml
+++ b/TabloidMVC/Views/Post/Index.cshtml
@@ -10,6 +10,8 @@
 
     <p>
         <a class="btn btn-primary" asp-action="Create">New Post</a>
+   
+        <a class="btn btn-primary" asp-action="MyPosts">My Posts</a>
     </p>
     <table class="table table-striped">
         <thead>
@@ -49,12 +51,8 @@
                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="View">
                             <i class="fas fa-eye"></i>
                         </a>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Edit">
-                            <i class="fas fa-pencil-alt"></i>
-                        </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Delete">
-                            <i class="fas fa-trash"></i>
-                        </a>
+                       
+                       
                     </td>
                 </tr>
             }
