--- a/TabloidMVC/Views/Post/MyPostDetails.cshtml
+++ b/TabloidMVC/Views/Post/MyPostDetails.cshtml
@@ -15,7 +15,14 @@
                 <p class="text-secondary">Written by @Model.UserProfile.DisplayName</p>
                 <p class="text-black-50">Published on @Html.DisplayFor(model => model.PublishDateTime)</p>
             </div>
-            
+            <div class="row">
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="Edit">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="Delete">
+                    <i class="fas fa-trash"></i>
+                </a>
+            </div>
         </section>
         <hr />
         @if (!string.IsNullOrWhiteSpace(Model.ImageLocation))
@@ -26,10 +33,6 @@
                 </div>
             </section>
         }
-        <br />
-        <br />
-        <br />
-        <h4>Post:</h4>
         <section class="row post__content">
             <p class="col-sm-12 mt-5">@Html.DisplayFor(model => model.Content)</p>
         </section>
