--- a/TabloidMVC/Views/Post/MyPosts.cshtml
+++ b/TabloidMVC/Views/Post/MyPosts.cshtml
@@ -10,6 +10,7 @@
 
     <p>
         <a class="btn btn-primary" asp-action="Create">New Post</a>
+        <a class="btn btn-primary" asp-action="Index">All Posts</a>
     </p>
     <table class="table table-striped">
         <thead>
@@ -47,7 +48,7 @@
                         @Html.DisplayFor(modelItem => item.PublishDateTime)
                     </td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="View">
+                        <a asp-action="MyPostDetails" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="View">
                             <i class="fas fa-eye"></i>
                         </a>
                         <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="Edit">
