--- a/TabloidMVC/Views/Post/MyPosts.cshtml
+++ b/TabloidMVC/Views/Post/MyPosts.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="container pt-5">
-    <h1>Posts</h1>
+    <h1>My Posts</h1>
 
     <p>
         <a class="btn btn-primary" asp-action="Create">New Post</a>
