remove comment for hiding edit link in the index view

--- a/TabloidMVC/Views/Tags/Index.cshtml
+++ b/TabloidMVC/Views/Tags/Index.cshtml
@@ -35,8 +35,8 @@
 
                     @* As the necessary features are implemented, uncomment the relevant links *@
 
-                    @*Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
-                    @*Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
+                    @Html.ActionLink("Edit", "Edit", new {  id=item.Id  }) @*|
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
                     @*Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
                 </td>
             </tr>
