--- a/TabloidMVC/Views/UserProfile/Index.cshtml
+++ b/TabloidMVC/Views/UserProfile/Index.cshtml
@@ -9,7 +9,7 @@
 
     @*<p>
         <a asp-action="Create">Create New</a>
-    </p>*@
+        </p>*@
     <table class="table">
         <thead>
             <tr>
@@ -38,9 +38,11 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.UserType.Name)
                     </td>
-                    @*<td>
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    </td>*@
+                    <td>
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary mx-1" title="View">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
