--- a/TabloidMVC/Views/Post/Details.cshtml
+++ b/TabloidMVC/Views/Post/Details.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = $"Post - {Model.Title}";
+    //Set variable that sues object passed from controller to get current user id
+    //We use it to make the conditional to make the edit and delete buttons show up if the post viewed belongs to the current user
+    int CUID = int.Parse(ViewData["currentUserId"].ToString());
 }
 
 <div class="container pt-5">
@@ -10,11 +13,25 @@
             <div class="row justify-content-between">
                 <h1 class="text-secondary">@Model.Title</h1>
                 <h1 class="text-black-50">@Model.Category.Name</h1>
+                
             </div>
+
             <div class="row justify-content-between">
                 <p class="text-secondary">Written by @Model.UserProfile.DisplayName</p>
                 <p class="text-black-50">Published on @Html.DisplayFor(model => model.PublishDateTime)</p>
+
             </div>
+            
+            @if ( CUID == Model.UserProfileId)
+            {<div class="row">
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="Edit">
+                    <i class="fas fa-pencil-alt"></i>
+                </a>
+                <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="Delete">
+                    <i class="fas fa-trash"></i>
+                </a>
+            </div>
+            }
             
         </section>
         <hr />
@@ -22,7 +39,7 @@
         {
             <section class="row justify-content-center">
                 <div>
-                    <img src="@Model.ImageLocation" />
+                    <img src="@Model.ImageLocation"  style="width:350px; height:350px;" />
                 </div>
             </section>
         }
@@ -34,11 +51,17 @@
             <p class="col-sm-12 mt-5">@Html.DisplayFor(model => model.Content)</p>
         </section>
     </div>
-    <td>
-                        <a asp-action="Comments" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="View">
-                            <i>Comments</i>
-                        </a>
+    
+        <a asp-action="Comments" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="View">
+            <i>Comments</i>
+        </a>
+
+        <a asp-action="Index" class="btn btn-outline-primary mx-1" title="View">
+            <i>Back To Post</i>
+        </a>
+
+        
                        
                        
-                    </td>
+                    
 </div>
