--- a/TabloidMVC/Views/Post/Delete.cshtml
+++ b/TabloidMVC/Views/Post/Delete.cshtml
@@ -32,7 +32,7 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ImageLocation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-10" >
             @Html.DisplayFor(model => model.ImageLocation)
         </dd>
         <dt class = "col-sm-2">
@@ -68,7 +68,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-outline-primary mx-1" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
