--- a/TabloidMVC/Views/Post/MyPostDetails.cshtml
+++ b/TabloidMVC/Views/Post/MyPostDetails.cshtml
@@ -29,7 +29,7 @@
         {
             <section class="row justify-content-center">
                 <div>
-                    <img src="@Model.ImageLocation" />
+                    <img src="@Model.ImageLocation" style="width:350px; height:350px;" />
                 </div>
             </section>
         }
@@ -37,4 +37,12 @@
             <p class="col-sm-12 mt-5">@Html.DisplayFor(model => model.Content)</p>
         </section>
     </div>
+
+     <a asp-action="Comments" asp-route-id="@Model.Id" class="btn btn-outline-primary mx-1" title="View">
+            <i>Comments</i>
+        </a>
+
+        <a asp-action="MyPosts" class="btn btn-outline-primary mx-1" title="View">
+            <i>Back To My Post</i>
+        </a>
 </div>
