--- a/TabloidMVC/Views/Post/Details.cshtml
+++ b/TabloidMVC/Views/Post/Details.cshtml
@@ -59,7 +59,7 @@
         </a>
 
         <a asp-action="Index" class="btn btn-outline-primary mx-1" title="View">
-            <i>Back To Post</i>
+            <i>Back To Posts</i>
         </a>
 
         
