--- a/TabloidMVC/Views/Comment/Create.cshtml
+++ b/TabloidMVC/Views/Comment/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
+<div class="container pt-5">
 <h1>@Model.Post.Title</h1>
 
 <h4>Comment</h4>
@@ -28,12 +29,15 @@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+            <div>
+            <a asp-controller="Post" asp-action="Comments" asp-route-id="@Model.Post.Id" class="btn btn-primary">Back to Comments</a>
+            </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+
+
 </div>
 
 @section Scripts {
